--- a/sections/main-cart-footer.liquid
+++ b/sections/main-cart-footer.liquid
@@ -99,7 +99,7 @@
                   {% endif %}
                   form="cart"
                 >
-                  {{ block.settings.remove_button }}
+                  {{ block.remove_button }}
                 </button>
               </div>
 
