--- a/sections/main-cart-footer.liquid
+++ b/sections/main-cart-footer.liquid
@@ -99,7 +99,7 @@
                   {% endif %}
                   form="cart"
                 >
-                  {{ block.remove_button }}
+                  Remove
                 </button>
               </div>
 
@@ -158,11 +158,6 @@
     {
       "type": "buttons",
       "name": "t:sections.main-cart-footer.blocks.buttons.name",
-      "limit": 1
-    },
-    {
-      "type": "remove_button",
-      "name": "Remove",
       "limit": 1
     },
     {
