--- a/sections/main-collection-product-grid.liquid
+++ b/sections/main-collection-product-grid.liquid
@@ -157,10 +157,9 @@
                 {%- endif -%}
                 <li
                   class="grid__item{% if settings.animations_reveal_on_scroll %} scroll-trigger animate--slide-in{% endif %}"
-                  style=" border:{{ section.settings.product_card_border_width }}px solid {{ section.settings.product_card_border_color }}"
                   {% if settings.animations_reveal_on_scroll %}
                     data-cascade
-                    style="--animation-order: {{ forloop.index }};border:{{ section.settings.product_card_border_width }}px solid {{ section.settings.product_card_border_color }} "
+                    style="--animation-order: {{ forloop.index }};"
                   {% endif %}
                 >
                   {% render 'card-product',
