--- a/sections/main-product.liquid
+++ b/sections/main-product.liquid
@@ -950,6 +950,19 @@
       "limit": 1
     },
     {
+      "type": "Product-extra-info",
+      "name": "Product-extra-info",
+      "limit": 1,
+      "settings": [
+        {
+          "type": "richtext",
+          "id": "show_dynamic_richtext",
+          "default": "Product-Extra-info",
+          "label": "Product-Extra-info"
+        }
+      ]
+    },
+    {
       "type": "share",
       "name": "t:sections.main-product.blocks.share.name",
       "limit": 1,
