fix/Product-extra-info

--- a/sections/main-product.liquid
+++ b/sections/main-product.liquid
@@ -952,13 +952,12 @@
     {
       "type": "Product-extra-info",
       "name": "Product-extra-info",
-      "limit": 1,
       "settings": [
         {
           "type": "richtext",
-          "id": "show_dynamic_richtext",
-          "default": "Product-Extra-info",
-          "label": "Product-Extra-info"
+          "id": "product-extra-info",
+          "default": "product-extra-info",
+          "label": "product-extra-info"
         }
       ]
     },
