fix/Product-extra-info

--- a/sections/main-product.liquid
+++ b/sections/main-product.liquid
@@ -956,7 +956,7 @@
         {
           "type": "richtext",
           "id": "product-extra-info",
-          "default": "product-extra-info",
+          "default": "<strong>",
           "label": "product-extra-info"
         }
       ]
