--- a/sections/main-product.liquid
+++ b/sections/main-product.liquid
@@ -191,6 +191,10 @@
                     {{ product.description }}
                   </div>
                 {%- endif -%}
+              {%- when 'product-extra-info' -%}
+                <div class="product__description rte quick-add-hidden" {{ block.shopify_attributes }}>
+                  {{ product.description }}
+                </div>
               {%- when 'sku' -%}
                 <p
                   class="product__sku{% if block.settings.text_style == 'uppercase' %} caption-with-letter-spacing{% elsif block.settings.text_style == 'subtitle' %} subtitle{% endif %}{% if product.selected_or_first_available_variant.sku.size == 0 %} visibility-hidden{% endif %}"
@@ -950,7 +954,7 @@
       "limit": 1
     },
     {
-      "type": "Product-extra-info",
+      "type": "product-extra-info",
       "name": "Product-extra-info",
       "settings": [
         {
