--- a/assets/section-main-product.css
+++ b/assets/section-main-product.css
@@ -35,12 +35,12 @@
     padding: 0 0 0 8rem;
   }
 
-  .product__info-container .product__rich_text {
+  .product__description .product-extra-info {
     max-height: 300px;
     overflow-y: auto;
   }
 
-  .product__info-container .product-extra-info {
+  .product__description .product-extra-info {
     line-height: 1.5;
     font-size: calc(14px + 0.5vw);
   }
